# taskfile

./: Cargo.toml  README.md  Taskfile.toml  install.sh  uninstall.sh
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/env-parser/: Cargo.toml
crates/env-parser/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/taskfile-runner/: Cargo.toml
crates/taskfile-runner/src/: lib.rs
src/: lib.rs  main.rs
