[workspace]
members = ["crates/env-parser", "crates/runner", "crates/cli"]

[package]
name = "taskfile"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "task"
path = "crates/cli/src/main.rs"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
runner = { path = "crates/runner" }
