[package]
name = "cli"
version = "0.5.0"
edition = "2024"
description = "Fast task runner written in Rust"
license = "MIT"

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
runner = { path = "../runner" }
